--- a/frontend/src/index.css
+++ b/frontend/src/index.css
@@ -29,12 +29,14 @@ code {
 .blog-container{
   margin-left: auto;
   margin-right: auto;
-  min-width: 300px;
-  width: 300px;
+  min-width: 500px;
+  width: 500px;
 }
 
 .blog-title{
   font-weight: 700;
+  display: flex;
+  justify-content: space-between;
 }
 
 .blog-user{
@@ -43,4 +45,8 @@ code {
 
 .blog-description{
   margin-top: 20px;
+}
+
+.follow-button{
+  margin-left: 20px;
 }
